--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link>
 
     <script lang="javascript">
+      function getName(){
+        var fullName;
+        fullName = document.getElementById("first").value;
+         document.getElementById("message").innerHTML = fullName;
+      }
     </script>
   </head>
 
