--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
     <script lang="javascript">
       function getName(){
-        var fullName;
-        fullName = document.getElementById("first").value;
-         document.getElementById("message").innerHTML = fullName;
+      var fullName;
+      fullName = document.getElementById("first").value + "&nbsp" + document.getElementById("last").value;
+      document.getElementById("message").innerHTML = fullName;
       }
     </script>
   </head>
 
   <body>
     <input type="text" id="first">
-    <input type="text" id="first">
+    <input type="text" id="last">
     <button type="button" id="doneButton" onclick="getName()">Done</button>
     <p id="message"> </p>
 
